# sing-box

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml
docs/: MANUAL.md  PRIVILEGED_HELPER.md  SDD.md  SUPPORT.md  TDD.md
docs/acceptance/: 2026-07-16-distro-policy.md  2026-07-16-release-audit.md  2026-07-17-actionable-dashboard-recommendation.md  2026-07-17-apply-history-copy.md  2026-07-17-apply-history.md  2026-07-17-capability-aware-operations-workspace.md  2026-07-17-config-adoption-copy.md  2026-07-17-confirmed-operation-navigation.md  2026-07-17-core-update-copy.md  2026-07-17-dashboard-maintenance-refresh.md  2026-07-17-dashboard-probe-failures.md  2026-07-17-dashboard-read-only-copy-shell.md  2026-07-17-dashboard-semantic-recommendation-copy.md  2026-07-17-desired-state-recovery.md  2026-07-17-diagnostics-center-copy.md  2026-07-17-explicit-connection-share-disclosure.md  2026-07-17-first-profile-creation-copy.md  2026-07-17-generated-configuration-diagnostics.md  2026-07-17-hash-bound-preference-reset.md  2026-07-17-host-readiness-copy.md  2026-07-17-host-runtime-diagnostics-copy.md  2026-07-17-keyboard-navigation.md  2026-07-17-listen-port-editing.md  2026-07-17-listener-ownership-diagnostics.md  2026-07-17-live-config-identity.md  2026-07-17-managed-certificate-diagnostics.md  2026-07-17-profile-action-boundary-failures.md  2026-07-17-profile-availability-copy.md  2026-07-17-profile-availability.md  2026-07-17-profile-clone-copy.md  2026-07-17-profile-details-copy.md  2026-07-17-profile-details-module-extraction.md  2026-07-17-profile-edit-copy.md  2026-07-17-profile-lifecycle-unknown-results.md  2026-07-17-profile-recommendation.md  2026-07-17-profile-removal-copy.md  2026-07-17-profile-template-cloning.md  2026-07-17-profiles-workspace-copy.md  2026-07-17-profiles-workspace-information-architecture.md  2026-07-17-public-domain-resolution.md  (+17 more)
docs/adr/: 0001-python-textual-rewrite.md  0002-deep-protocol-catalog.md  0003-sing-box-artifact-trust.md  0004-minimal-privileged-helper.md  0005-config-adoption-by-fingerprint.md  0006-versioned-python-package-installation.md  0007-transactional-profile-removal.md  0008-revision-bound-profile-metadata-editing.md  0009-prioritized-read-only-diagnostics-center.md  0010-typed-diagnostic-actions.md  0011-transactional-listen-port-editing.md  0012-generated-configuration-diagnostics.md  0013-public-domain-resolution-diagnostics.md  0014-transactional-profile-pause-resume.md  0015-purpose-first-protocol-recommendations.md  0016-hash-bound-desired-state-recovery.md  0017-secret-free-profile-template-cloning.md  0018-bounded-redacted-service-log-drill-down.md  0019-conservative-linux-listener-ownership-diagnostics.md  0020-bounded-managed-certificate-diagnostics.md  0021-durable-two-phase-apply-history.md  0022-catalogued-first-profile-creation.md  0023-dual-core-release-channels.md  0024-inline-acme-dual-channel-compatibility.md  0025-core-version-protocol-capabilities.md
src/sb_manager/: __init__.py  __main__.py  cli.py  host_certificate_policy.py  package_cli.py  policy_cli.py  privileged_cli.py
tests/acceptance/: test_connection_share_journey.py  test_core_channel_journey.py  test_core_update_journey.py  test_diagnostics_center_journey.py  test_first_profile_journey.py  test_host_readiness_journey.py  test_keyboard_navigation_journey.py  (+10 more)
(+260 files in other folders)
