[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "sing-box-manager"
version = "0.1.0"
description = "A guided terminal manager for building and operating sing-box proxy services"
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
dependencies = [
  "textual>=8.2,<9",
]

[project.scripts]
sb-manager = "sb_manager.cli:main"

[project.optional-dependencies]
dev = [
  "build>=1.3,<2",
  "mypy>=2.3,<3",
  "pytest>=9.1,<10",
  "pytest-asyncio>=1.4,<2",
  "ruff>=0.15,<0.16",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "integration: opt-in checks against explicitly configured host binaries",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
allowed-confusables = ["，", "："]
select = [
  "A",
  "ASYNC",
  "B",
  "C4",
  "E",
  "F",
  "I",
  "N",
  "PERF",
  "PIE",
  "PL",
  "PTH",
  "RUF",
  "SIM",
  "UP",
  "W",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true

[tool.setuptools.packages.find]
where = ["src"]
