[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "sing-box-manager"
version = "0.1.0"
description = "A guided terminal manager for building and operating sing-box proxy services"
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [{ name = "haoz0206" }]
keywords = ["sing-box", "proxy", "network", "textual", "tui"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "cryptography>=42,<50",
  "textual>=8.2,<9",
]

[project.scripts]
sb-manager = "sb_manager.cli:main"
sb-manager-install = "sb_manager.package_cli:main"
sb-manager-privileged = "sb_manager.privileged_cli:main"
sb-manager-install-policy = "sb_manager.policy_cli:main"

[project.optional-dependencies]
dev = [
  "build>=1.3,<2",
  "mypy>=2.3,<3",
  "pytest>=9.1,<10",
  "pytest-asyncio>=1.4,<2",
  "ruff>=0.15,<0.16",
  "twine>=6,<7",
]

[project.urls]
Homepage = "https://github.com/haoz0206/sing-box"
Documentation = "https://github.com/haoz0206/sing-box/tree/main/docs"
Repository = "https://github.com/haoz0206/sing-box"
Issues = "https://github.com/haoz0206/sing-box/issues"
Changelog = "https://github.com/haoz0206/sing-box/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "host: destructive opt-in checks against an explicitly configured host service",
  "integration: opt-in checks against explicitly configured host binaries",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
allowed-confusables = ["，", "："]
select = [
  "A",
  "ASYNC",
  "B",
  "C4",
  "E",
  "F",
  "I",
  "N",
  "PERF",
  "PIE",
  "PL",
  "PTH",
  "RUF",
  "SIM",
  "UP",
  "W",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sb_manager = ["ui/*.tcss"]
